publish releases to release repo

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 env:
   REPOSILITE_USERNAME: ${{ secrets.REPOSILITE_USERNAME }}
   REPOSILITE_PASSWORD: ${{ secrets.REPOSILITE_PASSWORD }}
+  REPOSILITE_URL: "https://reposilite.silenium.dev/releases"
 jobs:
 #  macos:
 #    runs-on: macos-11
