--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,78 +10,78 @@ env:
   REPOSILITE_PASSWORD: ${{ secrets.REPOSILITE_PASSWORD }}
   REPOSILITE_URL: "https://reposilite.silenium.dev/releases"
 jobs:
-#  macos:
-#    runs-on: macos-11
-#    steps:
-#      - uses: actions/checkout@v3
-#        name: 'Check out code'
-#
-#      - uses: actions/setup-java@v3
-#        name: 'Set up JDK 11'
-#        with:
-#          distribution: 'adopt'
-#          java-version: '11'
-#          cache: 'gradle'
-#
-#      - shell: bash
-#        name: 'Publish to Reposilite'
-#        run: |
-#          ./gradlew --stacktrace --info -Pskiko.native.enabled=true :skiko:publish
-#
-#  iOS:
-#    runs-on: macos-13
-#    steps:
-#      - uses: actions/checkout@v3
-#        name: 'Check out code'
-#
-#      - uses: actions/setup-java@v3
-#        name: 'Set up JDK 11'
-#        with:
-#          distribution: 'adopt'
-#          java-version: '11'
-#          cache: 'gradle'
-#
-#      - name: 'Print the devices list'
-#        run: xcrun simctl list devices available --json
-#
-#      # install jq - cli tool for json querying
-#      # retrieve the device .udid to use in tests and store it in env var
-#      - name: 'Set Up Simulator UUID'
-#        run: |
-#          brew install jq &&
-#          IOS_SIM_UUID=$(xcrun simctl list devices available --json | jq -r '.devices."com.apple.CoreSimulator.SimRuntime.iOS-17-0"[] | select(.name == "iPhone 14") | .udid') &&
-#          echo "IOS_SIM_UUID=$IOS_SIM_UUID" >> $GITHUB_ENV
-#
-#      - name: 'Print Selected UUID'
-#        run: echo $IOS_SIM_UUID
-#
-#      # TODO run iOS specific tests on iPhone simulator
-#      - shell: bash
-#        name: 'Publish to Reposilite'
-#        run: ./gradlew --stacktrace --info -Pskiko.native.enabled=true :skiko:publish
-#
-#  tvOS:
-#    # TVOS requires macos 13
-#    runs-on: macos-13
-#    # Steps represent a sequence of tasks that will be executed as part of the job
-#    steps:
-#      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#      - uses: actions/checkout@v2
-#      - uses: actions/setup-java@v2
-#        with:
-#          distribution: 'adopt'
-#          java-version: '11'
-#      - shell: bash
-#        run: |
-#          ./gradlew --stacktrace --info -Pskiko.native.enabled=true -Pskiko.test.onci=true :skiko:publish
+  macos:
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+        name: 'Check out code'
+
+      - uses: actions/setup-java@v4
+        name: 'Set up JDK 11'
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+          cache: 'gradle'
+
+      - shell: bash
+        name: 'Publish to Reposilite'
+        run: |
+          ./gradlew --stacktrace --info -Pskiko.native.enabled=true :skiko:publish
+
+  iOS:
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+        name: 'Check out code'
+
+      - uses: actions/setup-java@v4
+        name: 'Set up JDK 11'
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+          cache: 'gradle'
+
+      - name: 'Print the devices list'
+        run: xcrun simctl list devices available --json
+
+      # install jq - cli tool for json querying
+      # retrieve the device .udid to use in tests and store it in env var
+      - name: 'Set Up Simulator UUID'
+        run: |
+          brew install jq &&
+          IOS_SIM_UUID=$(xcrun simctl list devices available --json | jq -r '.devices."com.apple.CoreSimulator.SimRuntime.iOS-17-0"[] | select(.name == "iPhone 14") | .udid') &&
+          echo "IOS_SIM_UUID=$IOS_SIM_UUID" >> $GITHUB_ENV
+
+      - name: 'Print Selected UUID'
+        run: echo $IOS_SIM_UUID
+
+      # TODO run iOS specific tests on iPhone simulator
+      - shell: bash
+        name: 'Publish to Reposilite'
+        run: ./gradlew --stacktrace --info -Pskiko.native.enabled=true :skiko:publish
+
+  tvOS:
+    # TVOS requires macos 13
+    runs-on: macos-13
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+      - shell: bash
+        run: |
+          ./gradlew --stacktrace --info -Pskiko.native.enabled=true -Pskiko.test.onci=true :skiko:publish
 
   linux:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: 'Check out code'
 
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         name: 'Set up JDK 11'
         with:
           distribution: 'adopt'
@@ -125,14 +125,14 @@ jobs:
   windows:
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: 'Check out code'
 
       - uses: microsoft/setup-msbuild@v1
 
       - uses: ilammy/msvc-dev-cmd@v1
 
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         name: 'Set up JDK 11'
         with:
           distribution: 'adopt'
@@ -143,44 +143,44 @@ jobs:
         name: 'Publish to Reposilite'
         run: |
           ./gradlew --stacktrace --info -Pdeploy.release=true -Pdeploy.version=${{github.ref_name}}-egl :skiko:publish -x :skiko:publishKotlinMultiplatformPublicationToReposiliteRepository -x :skiko:publishAwtPublicationToReposiliteRepository
-#  web:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - uses: browser-actions/setup-chrome@v1
-#        with:
-#          chrome-version: stable
-#        id: setup-chrome
-#      - uses: actions/checkout@v2
-#      - uses: actions/setup-java@v2
-#        with:
-#          distribution: 'adopt'
-#          java-version: '11'
-#      - name: Install dependencies
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install libdbus-1-dev
-#      - name: 'install emsdk'
-#        shell: bash
-#        run: |
-#          cd ./skiko
-#          sudo apt-get update -y
-#          sudo apt-get install binutils build-essential -y
-#          sudo apt-get install software-properties-common -y
-#          sudo apt-get install python git curl wget -y
-#          if [ -d ./emsdk ]; then
-#            cd ./emsdk
-#            git pull
-#          else
-#            git clone https://github.com/emscripten-core/emsdk.git
-#            cd ./emsdk
-#          fi
-#          ./emsdk install 3.1.49
-#          ./emsdk activate 3.1.49
-#          source ./emsdk_env.sh
-#          cd ..
-#      - name: 'Publish to Reposilite'
-#        shell: bash
-#        run: |
-#          cd ./skiko
-#          source ./emsdk/emsdk_env.sh
-#          ./gradlew --stacktrace --info -Pskiko.wasm.enabled=true -Pskiko.js.enabled=true publish
+  web:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: stable
+        id: setup-chrome
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install libdbus-1-dev
+      - name: 'install emsdk'
+        shell: bash
+        run: |
+          cd ./skiko
+          sudo apt-get update -y
+          sudo apt-get install binutils build-essential -y
+          sudo apt-get install software-properties-common -y
+          sudo apt-get install python git curl wget -y
+          if [ -d ./emsdk ]; then
+            cd ./emsdk
+            git pull
+          else
+            git clone https://github.com/emscripten-core/emsdk.git
+            cd ./emsdk
+          fi
+          ./emsdk install 3.1.49
+          ./emsdk activate 3.1.49
+          source ./emsdk_env.sh
+          cd ..
+      - name: 'Publish to Reposilite'
+        shell: bash
+        run: |
+          cd ./skiko
+          source ./emsdk/emsdk_env.sh
+          ./gradlew --stacktrace --info -Pskiko.wasm.enabled=true -Pskiko.js.enabled=true publish
