--- a/skiko/gradle.properties
+++ b/skiko/gradle.properties
@@ -2,9 +2,9 @@ kotlin.code.style=official
 deploy.version=0.0.0
 
 
-dependencies.skia=m126-6fd3120c1b
+dependencies.skia=m126-6fd3120c1b-1
 
-# you can override general skia dependencies by passing platform-specific property: 
+# you can override general skia dependencies by passing platform-specific property:
 # dependencies.skia.android-arm64
 # dependencies.skia.android-x64
 # dependencies.skia.ios-arm64
