--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -158,7 +158,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install libdbus-1-dev
+          sudo apt-get install libdbus-1-dev libgl-dev libegl-dev libglx-dev
       - name: 'install emsdk'
         shell: bash
         run: |
